Verif/Test/Invalide/test_erreur_3.80-4.deca
// Description:
//    Programme soulevant l'erreur (3.80)
// Resultats:
//    Erreur contextuelle
//    Ligne 14 : Les types 'float' et 'boolean' sont incompatibles avec l'opérateur binaire '>=' (règle 3.80)
//
// Attributs: exec correct automatique
//
// Historique:
//    cree le 14/01/2012

boolean var;
{
   var = 1.0 >= true;
}